# test-grpc

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
protos/: chat.proto
test/cpp/: CMakeLists.txt  chatClient.cc  chatServer.cc
test/golang/: b.bat  go.mod  goclient.go
test/python/: b.bat  chat_pb2.py  pyClient.py  pyServer.py  run_codegen.py
